ags (2.3.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed libags-audio API reference manual

ags (2.3.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed WASAPI friendly name
	* fixed don't initialize device if its already playing/recording

ags (2.3.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved hide WASAPI related configuration controls if not needed

ags (2.3.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented WASAPI configuration options to adjust system buffer size and share mode
	* improved WASAPI IO

ags (2.3.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsWasapiDevout and AgsWasapiDevin
	* improved AgsDial invalid range
	* fixed memory leaks related to g_strdup_printf() in ags_simple_file.c

ags (2.3.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing includes

ags (2.3.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_fourier_transform_util_test.c

ags (2.3.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed don't rebuild types while make html

ags (2.3.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsFMSynth
	* implemented AgsFMSyncSynth
	* implemented AgsFMOscillator
	* implemented AgsPitchSampler and AgsPitchSamplerFile
	* implemented AgsSFZFile, AgsSFZGroup, AgsSFZRegion and AgsSFZSample
	* implemented AgsSFZLoader
	* implemented ags-lfo recall
	* implemented AgsComplex buffer type
	* implemented AgsFrequencyMapManager
	* implemented AgsFrequencyMap to compute max likelihood
	* implemented ags_fm_synth_util.h supporting FM synthesis
	* implemented ags_lfo_synth_util.h supporting LFO amplification
	* implemented ags_fourier_transform_util.c
	* implemented ags_filter_util.c
	* extended ags_simple_file.c
	* extended ags_audio_buffer_util.h to support complex data type