@@ -1,5 +1,5 @@
 /* GSequencer - Advanced GTK Sequencer
- * Copyright (C) 2005-2015 Joël Krähemann
+ * Copyright (C) 2005-2019 Joël Krähemann
  *
  * This file is part of GSequencer.
  *
@@ -24,6 +24,9 @@
 #include <gtk/gtk.h>
 
 #include <ags/X/ags_preferences.h>
+
+gboolean ags_preferences_delete_event_callback(GtkWidget *widget, GdkEventAny *event,
+					       gpointer user_data);
 
 void ags_preferences_response_callback(GtkDialog *dialog, gint response_id, gpointer user_data);
 
